--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,17 +9,28 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_local_notifications: ^19.4.2
   flutter_rating_bar: ^4.0.1
   flutter_svg: ^2.2.1
+  flutter_timezone: ^4.1.0
   http: ^1.5.0
   intl: ^0.20.2
+  path: ^1.9.1
+  path_provider: ^2.1.5
+  permission_handler: ^12.0.1
   provider: ^6.1.5+1
   shared_preferences: ^2.5.3
+  sqflite: ^2.4.2
+  workmanager: ^0.9.0+3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  integration_test:
+    sdk: flutter
+  mocktail: ^1.0.0
+  build_runner: ^2.4.0
+  test: ^1.24.0
 
 flutter:
   uses-material-design: true
