--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -31,6 +31,15 @@ jobs:
       - name: Run Unit & Widget Tests
         run: flutter test
 
+      - name: Setup Android Emulator
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 33
+          target: google_apis
+          arch: x86_64
+          force-avd-creation: true
+          emulator-options: -no-window -no-audio
+
       - name: Run Integration Tests
         run: flutter test integration_test/
 
