--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,11 @@ dependencies:
   provider: ^6.1.5+1
   shared_preferences: ^2.5.3
   sqflite: ^2.4.2
-  workmanager: ^0.9.0+3
+  workmanager:
+    git:
+      url: https://github.com/fluttercommunity/flutter_workmanager.git
+      path: workmanager
+      ref: main
 
 dev_dependencies:
   flutter_test:
