--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
     <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
     <application
+        android:enableOnBackInvokedCallback="true"
         android:label="restoguh_dicoding_fundamentl"
         android:name="${applicationName}"
         android:hardwareAccelerated="true"
